<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/wallpaper2"
    tools:context="com.example.android.taekwondoscorekeeper.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <ScrollView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:background="@color/blueButtonTr"
            android:layout_weight="1">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/blueButtonTr"
                    android:gravity="center"
                    android:padding="4dp"
                    android:textSize="20sp"
                    android:text="@string/blue_player"
                    android:textColor="@android:color/white" />

                <TextView
                    android:id="@+id/blue_player_score"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:padding="4dp"
                    android:text="@string/NULL"
                    android:textColor="@android:color/white"
                    android:textSize="48sp" />

                <TextView
                    android:id="@+id/blue_player_fouls"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:padding="4dp"
                    android:text="@string/NULL"
                    android:textSize="20sp"
                    android:textColor="@android:color/white" />

                <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    android:onClick="blueIncreaseBy3"
                    android:text="@string/points_3"
                    android:textColor="@android:color/white"
                    android:theme="@style/BlueButtons" />

                <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    android:onClick="blueIncreaseBy2"
                    android:text="@string/points_2"
                    android:textColor="@android:color/white"
                    android:theme="@style/BlueButtons" />

                <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    android:onClick="blueIncreaseBy1"
                    android:text="@string/points_1"
                    android:textColor="@android:color/white"
                    android:theme="@style/BlueButtons" />

                <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    android:onClick="blueFoul"
                    android:text="@string/foul"
                    android:textColor="@android:color/white"
                    android:theme="@style/BlueButtons" />

                <Button
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:layout_margin="8dp"
                    android:visibility="invisible" />
            </LinearLayout>
        </ScrollView>

        <View
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:layout_weight="0"
            android:background="@android:color/darker_gray" />

        <ScrollView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:background="@color/redButtonTr"
            android:layout_weight="1">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/redButtonTr"
                    android:gravity="center"
                    android:padding="4dp"
                    android:textSize="20sp"
                    android:text="@string/red_player"
                    android:textColor="@android:color/white" />

                <TextView
                    android:id="@+id/red_player_score"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:padding="4dp"
                    android:text="@string/NULL"
                    android:textColor="@android:color/white"
                    android:textSize="48sp" />

                <TextView
                    android:id="@+id/red_player_fouls"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:padding="4dp"
                    android:text="@string/NULL"
                    android:textSize="20sp"
                    android:textColor="@android:color/white" />

                <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    android:onClick="redIncreaseBy3"
                    android:text="@string/points_3"
                    android:textColor="@android:color/white"
                    android:theme="@style/RedButtons" />

                <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    android:onClick="redIncreaseBy2"
                    android:text="@string/points_2"
                    android:textColor="@android:color/white"
                    android:theme="@style/RedButtons" />

                <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    android:onClick="redIncreaseBy1"
                    android:text="@string/points_1"
                    android:textColor="@android:color/white"
                    android:theme="@style/RedButtons" />

                <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    android:onClick="redFoul"
                    android:text="@string/foul"
                    android:textColor="@android:color/white"
                    android:theme="@style/RedButtons" />

                <Button
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:layout_margin="8dp"
                    android:visibility="invisible" />
            </LinearLayout>
        </ScrollView>
    </LinearLayout>

    <Button
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_margin="8dp"
        android:background="@drawable/taewondo"
        android:onClick="resetScore"
        android:text="@string/reset"
        android:textColor="@android:color/white" />

</RelativeLayout>
